Practice more generative backtracking problems from the LeetCode guide

--- a/LeetCode/backtracking.ipynb
+++ b/LeetCode/backtracking.ipynb
@@ -444,6 +444,189 @@
     "answer = find_combos_matching_sum(candidates, target)\n",
     "print(answer)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a91bdf29",
+   "metadata": {},
+   "source": [
+    "22. Generate Parentheses  \n",
+    "Medium \n",
+    "\n",
+    "Given n pairs of parentheses, write a function to generate all combinations of well-formed parentheses. \n",
+    "\n",
+    "Input: n = 3\n",
+    "Output: [\"((()))\",\"(()())\",\"(())()\",\"()(())\",\"()()()\"]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "c1a5fba3",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['((()))', '(()())', '(())()', '()(())', '()()()']\n"
+     ]
+    }
+   ],
+   "source": [
+    "n = 3\n",
+    "answer = [\"((()))\",\"(()())\",\"(())()\",\"()(())\",\"()()()\"]\n",
+    "\n",
+    "def assemble_all_bracket_combinations(n):\n",
+    "\n",
+    "    def complete_or_continue_sequence(current_sequence, n_left = 0, n_right = 0):\n",
+    "    \n",
+    "        if len(current_sequence) == len_complete:\n",
+    "            all_combinations.append(current_sequence)\n",
+    "            return\n",
+    "\n",
+    "        for bracket in brackets:\n",
+    "            if (n_left == n and bracket == \"(\") or (n_left == n_right and bracket == \")\"):\n",
+    "                pass\n",
+    "            else:\n",
+    "                current_sequence = current_sequence + bracket\n",
+    "                if bracket  == \"(\":\n",
+    "                    complete_or_continue_sequence(current_sequence, n_left + 1, n_right)\n",
+    "                if bracket == \")\":\n",
+    "                    complete_or_continue_sequence(current_sequence, n_left, n_right + 1)\n",
+    "                current_sequence = current_sequence[:-1]\n",
+    "\n",
+    "    len_complete = n * 2\n",
+    "    brackets = [\"(\", \")\"]\n",
+    "    all_combinations = []\n",
+    "    current_sequence = \"\"\n",
+    "\n",
+    "    complete_or_continue_sequence(current_sequence)\n",
+    "\n",
+    "    return all_combinations\n",
+    "\n",
+    "answer = assemble_all_bracket_combinations(n)\n",
+    "print(answer)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "2435c655",
+   "metadata": {},
+   "source": [
+    "**967. Numbers With Same Consecutive Differences**  \n",
+    "Medium \n",
+    "\n",
+    "Given two integers n and k,  \n",
+    "return an array of all the integers of length n  \n",
+    "where the difference between every two consecutive digits is k.  \n",
+    "You may return the answer in any order.\n",
+    "\n",
+    "Note that the integers should not have leading zeros. Integers as 02 and 043 are not allowed."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "34d39e46",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[1, 8, 1], [2, 9, 2], [7, 0, 7], [8, 1, 8], [9, 2, 9]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "n = 3\n",
+    "k = 7\n",
+    "answer = [181, 292, 707, 818, 929]\n",
+    "\n",
+    "def find_valid_combinations(n, k):\n",
+    "\n",
+    "    def expand_or_complete_combo(current_combo, i):\n",
+    "\n",
+    "        if i == n:\n",
+    "            valid_combos.append(current_combo[:])\n",
+    "            return\n",
+    "\n",
+    "        for digit in digits:\n",
+    "            if (i == 0 and digit != 0) or (0 < i and abs(digit - current_combo[i - 1]) == k):\n",
+    "                current_combo.append(digit)\n",
+    "                expand_or_complete_combo(current_combo, i + 1)\n",
+    "                current_combo.pop()\n",
+    "        \n",
+    "    digits = [n for n in range(10)]\n",
+    "    valid_combos = []\n",
+    "    current_combo = []\n",
+    "\n",
+    "    expand_or_complete_combo(current_combo, 0)\n",
+    "\n",
+    "    return valid_combos\n",
+    "\n",
+    "answer = find_valid_combinations(n, k)\n",
+    "print(answer)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "8345fbd8",
+   "metadata": {},
+   "source": [
+    "**216. Combination Sum III**  \n",
+    "Medium  \n",
+    "Find all valid combinations of k numbers that sum up to n such that the following conditions are true: \n",
+    "\n",
+    "- Only numbers 1 through 9 are used.\n",
+    "- Each number is used at most once.\n",
+    "\n",
+    "Return a list of all possible valid combinations.  \n",
+    "The list must not contain the same combination twice, and the combinations may be returned in any order.\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "id": "47f248b1",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[1, 2, 4]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "k = 3\n",
+    "n = 7\n",
+    "answer = [[1,2,4]]\n",
+    "\n",
+    "def find_integers_with_given_sum(n, k):\n",
+    "\n",
+    "    def expand_or_complete_combo(current_combo, current_sum, i):\n",
+    "\n",
+    "        if len(current_combo) == k and current_sum == n:\n",
+    "            valid_combos.append(current_combo[:])\n",
+    "            return\n",
+    "\n",
+    "        for digit in range(i, 10):\n",
+    "            if len(current_combo) < k and (current_sum + digit) <= n:\n",
+    "                current_combo.append(digit)\n",
+    "                expand_or_complete_combo(current_combo, current_sum + digit, digit + 1)\n",
+    "                current_combo.pop()\n",
+    "    \n",
+    "    valid_combos = []\n",
+    "    expand_or_complete_combo(current_combo = [], current_sum = 0, i = 1)\n",
+    "\n",
+    "    return valid_combos\n",
+    "\n",
+    "answer = find_integers_with_given_sum(n, k)\n",
+    "print(answer)"
+   ]
   }
  ],
  "metadata": {
