Practice problems - ordering three colours and seeing if you can form a longer word from a list of smaller ones

--- a/programming_practice/expanded_practice.ipynb
+++ b/programming_practice/expanded_practice.ipynb
@@ -665,6 +665,236 @@
     "                    ans.append([name]+sorted(self.res))\n",
     "        return ans\n"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "06dd8a90",
+   "metadata": {},
+   "source": [
+    "**75. Sort Colors**  \n",
+    "Medium  \n",
+    "\n",
+    "Given an array nums with n objects colored red, white, or blue, sort them in-place so that objects of the same color are adjacent, with the colors in the order red, white, and blue.\n",
+    "\n",
+    "We will use the integers 0, 1, and 2 to represent the color red, white, and blue, respectively.\n",
+    "\n",
+    "You must solve this problem without using the library's sort function."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "2c6c0e77",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0, 0, 1, 1, 2, 2]\n"
+     ]
+    }
+   ],
+   "source": [
+    "nums = [2,0,2,1,1,0]\n",
+    "answer = [0,0,1,1,2,2]\n",
+    "\n",
+    "def sort_two_arrays(arr1, arr2):\n",
+    "    i = j = 0\n",
+    "    sorted_array = []\n",
+    "\n",
+    "    while i < len(arr1) and j < len(arr2):\n",
+    "\n",
+    "        if arr1[i] <= arr2[j]:\n",
+    "            sorted_array.append(arr1[i])\n",
+    "            i += 1\n",
+    "\n",
+    "        else:\n",
+    "            sorted_array.append(arr2[j])\n",
+    "            j += 1\n",
+    "\n",
+    "    while i < len(arr1):\n",
+    "\n",
+    "        sorted_array.append(arr1[i])\n",
+    "        i += 1\n",
+    "\n",
+    "    while j < len(arr2):\n",
+    "\n",
+    "        sorted_array.append(arr2[j])\n",
+    "        j += 1\n",
+    "\n",
+    "    return sorted_array\n",
+    "\n",
+    "def split_and_sort(arr):\n",
+    "\n",
+    "    if len(arr) == 1:\n",
+    "        return arr\n",
+    "    \n",
+    "    # Divide\n",
+    "    pivot = len(arr) // 2\n",
+    "    arr1 = arr[:pivot]\n",
+    "    arr2 = arr[pivot:]\n",
+    "\n",
+    "    # Conquer\n",
+    "    arr1_sorted = split_and_sort(arr1)\n",
+    "    arr2_sorted = split_and_sort(arr2) \n",
+    "    sorted_array = sort_two_arrays(arr1_sorted, arr2_sorted)\n",
+    "\n",
+    "    return sorted_array\n",
+    "\n",
+    "answer = split_and_sort(nums)\n",
+    "print(answer)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7c67fb70",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Optimal solution = O(n) rather than merge sort's O(n log(n))\n",
+    "\n",
+    "# This is a dutch partitioning problem. \n",
+    "# We are classifying the array into four groups: red, white, unclassified, and blue. \n",
+    "# Initially we group all elements into unclassified. \n",
+    "# We iterate from the beginning as long as the white pointer is less than the blue pointer.\n",
+    "\n",
+    "# If the white pointer is red (nums[white] == 0), we swap with the red pointer and move both white and red pointer forward. \n",
+    "# If the pointer is white (nums[white] == 1), the element is already in correct place, so we don't have to swap, just move the white pointer forward. \n",
+    "# If the white pointer is blue, we swap with the latest unclassified element.\n",
+    "\n",
+    "def sortColors(nums):\n",
+    "    low = 0, \n",
+    "    mid = 0, \n",
+    "    high = len(nums) - 1\n",
+    "    \n",
+    "    while mid <= high:\n",
+    "        if nums[mid] == 0:\n",
+    "            nums[low], nums[mid] = nums[mid], nums[low]\n",
+    "            low += 1\n",
+    "            mid += 1\n",
+    "        elif nums[mid] == 1:\n",
+    "            mid += 1\n",
+    "        else:\n",
+    "            nums[high], nums[mid] = nums[mid], nums[high]\n",
+    "            high -= 1"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e22b1e11",
+   "metadata": {},
+   "source": [
+    "**139. Word Break**  \n",
+    "Medium  \n",
+    "\n",
+    "Given a string s and a dictionary of strings wordDict, return true if s can be segmented into a space-separated sequence of one or more dictionary words.\n",
+    "\n",
+    "Note that the same word in the dictionary may be reused multiple times in the segmentation."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "id": "a4c53310",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n"
+     ]
+    }
+   ],
+   "source": [
+    "s = \"leetcode\"\n",
+    "wordDict = [\"leet\",\"code\"]\n",
+    "answer = True\n",
+    "# Return true because \"leetcode\" can be segmented as \"leet code\"\n",
+    "\n",
+    "# moving a pointer along s, for each word in wordDict, check for a match with each letter\n",
+    "# IF we reach the end of the word in wordDict, start again\n",
+    "# as soon as a letter doesn't match, stop checking that word (delete the pointer)\n",
+    "\n",
+    "def can_we_create_word_from_wordDict(s, wordDict):\n",
+    "\n",
+    "    def check_if_match_or_add_word(current_combo):\n",
+    "\n",
+    "        if current_combo == s:\n",
+    "            answer[0] = True\n",
+    "            return\n",
+    "\n",
+    "        for current_word in wordDict:\n",
+    "\n",
+    "            if len(current_combo) + len(current_word) <= len(s):\n",
+    "\n",
+    "                current_combo = current_combo + current_word\n",
+    "                check_if_match_or_add_word(current_combo)\n",
+    "                current_combo = current_combo[:-len(current_word)]\n",
+    "\n",
+    "    answer = [False]\n",
+    "    current_combo = \"\"\n",
+    "    check_if_match_or_add_word(current_combo)\n",
+    "    return answer[0]\n",
+    "\n",
+    "answer = can_we_create_word_from_wordDict(s, wordDict)\n",
+    "print(answer)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "id": "c455821d",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 33,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "s = \"leetcode\"\n",
+    "wordDict = [\"leet\",\"code\"]\n",
+    "\n",
+    "def wordBreak(s, wordDict):\n",
+    "    dp = [False] * (len(s)+1)\n",
+    "    dp[0] = True\n",
+    "    \n",
+    "    for i in range(1, len(s)+1):\n",
+    "        for j in range(i):\n",
+    "            if dp[j] and s[j:i] in wordDict:\n",
+    "                # dp[j] if the first part of the word is directly in the dictionary / can be built from the dictionary components...\n",
+    "                # ...and s[j:i] is directly in the dictionary\n",
+    "                dp[i] = True\n",
+    "                break\n",
+    "                \n",
+    "    return dp[-1]\n",
+    "    \n",
+    "wordBreak(s, wordDict)\n",
+    "\n",
+    "# - The state is whether there is a word matching the number of letters in \n",
+    "\n",
+    "# Initialize DP Array:\n",
+    "\n",
+    "# dp = [True, False, False, False, False, False, False, False, False]\n",
+    "\n",
+    "# Fill DP Array:\n",
+    "\n",
+    "# dp[4] becomes True because \"leet\" is in wordDict.\n",
+    "# dp[8] becomes True because \"code\" is in wordDict and dp[4] is True.\n",
+    "\n",
+    "# Final DP Array:\n",
+    "\n",
+    "# dp = [True, False, False, False, True, False, False, False, True]"
+   ]
   }
  ],
  "metadata": {
@@ -683,7 +913,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.1"
+   "version": "3.11.7"
   }
  },
  "nbformat": 4,
